tests/NormalTests/paczka1/fuzzy1/25293052.err
Error in line 10: R9wGS06xKmT A913 231,0
Error in line 24: A913 S97 44,3
